# eglexternalplatform

./: README.md  eglexternalplatform.pc  meson.build
interface/: eglexternalplatform.h  eglexternalplatformversion.h
samples/: libsample-egl-platform.c  sample-egl-client.c  sample-egl-server.c
